--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-  <!-- Navbar with Logo -->
+ 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\logo.jpg" alt="StockWise Logo" width="40" height="40" class="me-2">
+        <img src="logo.jpg" alt="StockWise Logo" width="40" height="40" class="me-2">
         <span>StockWise</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -35,13 +35,13 @@
     </div>
   </nav>
 
-  <!-- Blog Cards -->
+
   <div class="container my-5">
     <div class="row g-4">
       <!-- Card 1 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\Top 5 Stocks to Watch.png"" class="card-img-top" alt="Top Stocks">
+          <img src="Top 5 Stocks to Watch.png"" class="card-img-top" alt="Top Stocks">
           <div class="card-body">
             <h5 class="card-title">Top 5 Stocks to Watch</h5>
             <p class="card-text">A weekly roundup of high-potential stocks with strong fundamentals and momentum.</p>
@@ -52,7 +52,7 @@
       <!-- Card 2 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\Beginner’s Guide to Stock Investing.png" class="card-img-top" alt="Stock Guide">
+          <img src="Beginner’s Guide to Stock Investing.png" class="card-img-top" alt="Stock Guide">
           <div class="card-body">
             <h5 class="card-title">Beginner’s Guide to Stock Investing</h5>
             <p class="card-text">Learn how to start your investment journey with confidence and smart strategies.</p>
@@ -63,7 +63,7 @@
       <!-- Card 3 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\market trends and predictions.png" class="card-img-top" alt="Trading">
+          <img src="market trends and predictions.png" class="card-img-top" alt="Trading">
           <div class="card-body">
             <h5 class="card-title">Market Trends & Predictions</h5>
             <p class="card-text">Our analysts decode the latest market movements and what they mean for investors.</p>
@@ -74,7 +74,7 @@
       <!-- Card 4 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\Stock Analysis Techniques.png" class="card-img-top" alt="Analysis">
+          <img src="Stock Analysis Techniques.png" class="card-img-top" alt="Analysis">
           <div class="card-body">
             <h5 class="card-title">Stock Analysis Techniques</h5>
             <p class="card-text">Explore key techniques analysts use to evaluate and forecast stock performance.</p>
@@ -85,7 +85,7 @@
       <!-- Card 5 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="C:\Users\samud\OneDrive\Documents\intern msme\my_blog\latest market news.png" class="card-img-top" alt="News">
+          <img src="Clatest market news.png" class="card-img-top" alt="News">
           <div class="card-body">
             <h5 class="card-title">Latest Market News</h5>
             <p class="card-text">Catch up with the latest headlines and their impact on today’s market trends.</p>
@@ -96,7 +96,7 @@
     </div>
   </div>
 
-  <!-- Footer -->
+
   <footer class="footer text-center py-4 bg-light">
     <div class="container">
       <p class="mb-2">Follow us for daily market insights</p>
